--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
           <textarea
             id="description"
             type="text"
-            placeholder="enter the details...."
+            placeholder="Enter the details...."
           ></textarea>
           <input
             id="submit-button"
